z-index fix

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 10;
+    z-index: 30;
 }
 
 .header-left {
